--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ yandex_site_verification :
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links:[] # An array of links to social media profiles
 
 
 # Analytics
